deploy with test case passing